<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/MaterialSelectInfoText"
                    android:id="@+id/MaterialSelectInfoText"
                    android:layout_margin="16dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Kites"
                    android:id="@+id/infoTextKite"
                    android:layout_below="@+id/MaterialSelectInfoText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

                <View
                    android:id="@+id/dividerView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/infoTextKite"
                    android:background="@color/medium_blue"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/horizontalLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoTextKite"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">


                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonNew"
                        android:id="@+id/btnNewKite" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonUpdate"
                        android:id="@+id/btnUpdateKite" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnDeleteKite"
                        android:text="@string/buttonDelete" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Bars"
                    android:id="@+id/infoTextBar"
                    android:layout_below="@+id/horizontalLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

                <View
                    android:id="@+id/dividerView2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/infoTextBar"
                    android:background="@color/medium_blue"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/horizontalLayoutBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoTextBar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">


                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonNew"
                        android:id="@+id/btnNewBar" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonUpdate"
                        android:id="@+id/btnUpdateBar" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnDeleteBar"
                        android:text="@string/buttonDelete" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/utilities"
                    android:id="@+id/infoTextUtilites"
                    android:layout_below="@+id/horizontalLayoutBar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

                <View
                    android:id="@+id/dividerView3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/infoTextUtilites"
                    android:background="@color/medium_blue"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/horizontalLayoutUti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoTextUtilites"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">


                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonNew"
                        android:id="@+id/btnNewUtil" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonUpdate"
                        android:id="@+id/btnUpdateUtil" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnDeleteUtil"
                        android:text="@string/buttonDelete" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Wartung"
                    android:id="@+id/infoTextService"
                    android:layout_below="@+id/horizontalLayoutUti"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

                <View
                    android:id="@+id/dividerView4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/infoTextService"
                    android:background="@color/medium_blue"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/horizontalLayoutService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoTextService"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">


                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonNew"
                        android:id="@+id/btnNewService" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buttonUpdate"
                        android:id="@+id/btnUpdateService" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnDeleteService"
                        android:text="@string/buttonDelete" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>